# GopherNotes

./: .gitignore  LICENSE  README.md  package-lock.json
client/: index.html  login.html  package-lock.json  package.json  script.js
client/gophernotes/: notes.html  package-lock.json  package.json  upload.html
client/gophernotes/src/: App.css  App.tsx  index.css
client/gophernotes/src/components/: Filters.tsx  Footer.tsx  Header.tsx  Notes.tsx
client/public/server/: .env  Cargo.toml
client/public/server/src/: main.rs
client/src/: App.css  App.tsx  Img.tsx  Nav.css  Nav.tsx  constants.ts  index.css  main.css  main.ts  main.tsx
client/src/components/PostCard/: PostCard.css  PostCard.tsx
client/src/components/ProfilePictureUpvotes/: ProfilePictureUpvotes.css  ProfilePictureUpvotes.tsx
client/src/css/: main.css
client/src/routes/Class/: Class.css  Class.tsx
client/src/routes/Home/: Home.css  Home.tsx
client/src/routes/NotFound/: NotFound.tsx
client/src/routes/Post/: Post.css  Post.tsx
client/src/routes/PostDetail/: PostDetail.css  PostDetail.tsx
client/src/routes/Posts/: Posts.css  Posts.tsx
client/src/routes/Profile/: ProfilePage.css  ProfilePage.tsx
client/src/routes/Upload/: Upload.css  Upload.tsx
client/src/routes/User/: User.tsx
server/: .env  .gitignore  Cargo.toml  init.sql  scripts.sql
server/.sqlx/: query-36b3cfc9c9ff2e1b4e3136f846a5f9e604f607f870d21dd28cd9fd6928d1e1b9.json
server/src/: main.rs  routes.rs
server/src/routes/: class.rs  home.rs  post.rs  posts.rs  professor.rs  upload.rs
(+21 files in other folders)
