[package]
name = "gophernotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
axum = { version = "0.6.20", features = ["multipart"] }
axum_typed_multipart = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors"] }
