[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features=["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["cors"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
rand_core = { version = "0.6.4", features = ["std"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.0"
dotenv = "0.15.0"
# time = "0.3.31"
# chrono = "0.4.31"
# thiserror = "1.0.57"
# mailchecker = "6.0.3"